fixes ans some jQuery
fixed:
- jQuery license not showing on post pages
- sharing on twitter not in new tab
- redundant css removed
- 404 sometimes not working
- post <insert your title here> - images not in center

added my first jQuery for license <3

open:
- container moves to left when opening post page containing an image ...
no idea why...

--- a/style.css
+++ b/style.css
@@ -83,9 +83,15 @@ h1, h2, h3, h4, h5, h6 {
 	opacity:0.6;
 }
 
+.licensetext {
+	width:200px;
+	float:left;
+	font-size:0.7em;
+	margin:0px 10px 0px 5px;
+}
+
 #post {
-	margin: 5px;
-	padding: 10px 20px 10px 20px;
+	padding: 10px 20px 10px 30px;
 }
 
 .subpost {
@@ -96,10 +102,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #post img {
-	vertical-align: middle;
 	width:250px;
-	padding:5px;
-	margin:5px;
+	margin:5px 5px 0px 0px;
 }
 
 .caption {
